syntax = "proto3";

package proto;
option go_package = "github.com/order-management/proto";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (Product) {}
  rpc GetProduct(GetProductRequest) returns (Product) {}
  rpc UpdateProduct(UpdateProductRequest) returns (Product) {}
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse) {}
  rpc UpdateStock(UpdateStockRequest) returns (Product) {}
}

message Product {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
  string category = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock_quantity = 4;
  string category = 5;
}

message GetProductRequest {
  string id = 1;
}

message UpdateProductRequest {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  string category = 5;
}

message UpdateStockRequest {
  string id = 1;
  int32 quantity_change = 2; // Positive for stock addition, negative for reduction
}

message ListProductsRequest {
  string category = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ListProductsResponse {
  repeated Product products = 1;
  int32 total = 2;
}
